Made the site brand resize to help prevent the navbar from wrapping when viewing on phones.

--- a/SourceCode/WebSite/css/navbar.css
+++ b/SourceCode/WebSite/css/navbar.css
@@ -5,55 +5,90 @@
     padding-top: 0;
 }
 
+.top-navigation .navbar-brand {
+    background: #0085B2;
+    color: #fff;
+    padding: 15px 0px 15px 25px;
+    width: 357px
+}
+
 #custom-bootstrap-menu.navbar-default .navbar-brand {
     color: rgba(191, 255, 0, 1);
 }
+
 #custom-bootstrap-menu.navbar-default {
     font-size: 14px;
     background-color: rgba(0, 133, 178, 1);
     border-width: 0px;
     border-radius: 0px;
 }
-#custom-bootstrap-menu.navbar-default .navbar-nav>li>a {
-    color: rgba(191, 255, 0, 1);
-    background-color: rgba(248, 248, 248, 0);
-}
-#custom-bootstrap-menu.navbar-default .navbar-nav>li>a:hover,
-#custom-bootstrap-menu.navbar-default .navbar-nav>li>a:focus {
-    color: rgba(191, 255, 0, 1);
-    background-color: rgba(0, 133, 178, 1);
-}
-#custom-bootstrap-menu.navbar-default .navbar-nav>.active>a,
-#custom-bootstrap-menu.navbar-default .navbar-nav>.active>a:hover,
-#custom-bootstrap-menu.navbar-default .navbar-nav>.active>a:focus {
-    color: rgba(191, 255, 0, 1);
-    background-color: rgba(0, 133, 178, 1);
-}
-#custom-bootstrap-menu.navbar-default .navbar-toggle {
-    border-color: #0085b2;
-}
-#custom-bootstrap-menu.navbar-default .navbar-toggle:hover,
-#custom-bootstrap-menu.navbar-default .navbar-toggle:focus {
-    background-color: #0085b2;
-}
-#custom-bootstrap-menu.navbar-default .navbar-toggle .icon-bar {
-    background-color: rgba(191, 255, 0, 1);
-    width: 30px;
-    height: 4px;
-}
-#custom-bootstrap-menu.navbar-default .navbar-toggle:hover .icon-bar,
-#custom-bootstrap-menu.navbar-default .navbar-toggle:focus .icon-bar {
-    background-color: rgba(191, 255, 0, 1);
-}
+
+    #custom-bootstrap-menu.navbar-default .navbar-nav > li > a {
+        color: rgba(191, 255, 0, 1);
+        background-color: rgba(248, 248, 248, 0);
+    }
+
+        #custom-bootstrap-menu.navbar-default .navbar-nav > li > a:hover,
+        #custom-bootstrap-menu.navbar-default .navbar-nav > li > a:focus {
+            color: rgba(191, 255, 0, 1);
+            background-color: rgba(0, 133, 178, 1);
+        }
+
+    #custom-bootstrap-menu.navbar-default .navbar-nav > .active > a,
+    #custom-bootstrap-menu.navbar-default .navbar-nav > .active > a:hover,
+    #custom-bootstrap-menu.navbar-default .navbar-nav > .active > a:focus {
+        color: rgba(191, 255, 0, 1);
+        background-color: rgba(0, 133, 178, 1);
+    }
+
+    #custom-bootstrap-menu.navbar-default .navbar-toggle {
+        border-color: #0085b2;
+    }
+
+        #custom-bootstrap-menu.navbar-default .navbar-toggle:hover,
+        #custom-bootstrap-menu.navbar-default .navbar-toggle:focus {
+            background-color: #0085b2;
+        }
+
+        #custom-bootstrap-menu.navbar-default .navbar-toggle .icon-bar {
+            background-color: rgba(191, 255, 0, 1);
+            width: 30px;
+            height: 4px;
+        }
+
+        #custom-bootstrap-menu.navbar-default .navbar-toggle:hover .icon-bar,
+        #custom-bootstrap-menu.navbar-default .navbar-toggle:focus .icon-bar {
+            background-color: rgba(191, 255, 0, 1);
+        }
 
 .navbar-item-font {
     font-size: 18px;
     font-weight: bold;
 }
 
+.navbar-toggle-adjusted {
+    margin-top: 30px;
+}
+
+.navbar-logo {
+    zoom: 100%;
+}
+
 @media (max-width: 767px) {
     .navbar-nav > li > a {
-    line-height: 15px;
-    height: 50px;
-    padding-top: 0;
+        line-height: 15px;
+        height: 50px;
+        padding-top: 0;
+    }
+
+    .navbar-logo {
+        zoom: 75%;
+    }
+
+    .top-navigation .navbar-brand {
+        background: #0085B2;
+        color: #fff;
+        padding: 15px 0px 15px 25px;
+        width: 268px
+    }
 }
